# BachelorThesis

./: .gitignore  AST.hs  AbsLang.hs  C.hs  CDefs.hs  CLang.hs  CLang2.hs  DeadCodePass.hs  DemotePairsPass.hs  DemotePass.hs  FenneC.hs  FirstOrderLang.hs  IOpractice.hs  InlinePass.hs  LambdaMergePass.hs  LlvmLang.hs  LoopUnrollPass.hs  Main.hs  NamedLang.hs  Optimiser.hs  README.md  Utils.hs  benchmark_results_20260610_133452.csv  cabal.project  eval.hs  genList.py  lambdaemma.cabal  llvm.hs  measure.py  output  output.c  questions.md
OtherCode/: CLang.hs  FirstOrderLang.hs  IOpractice.hs  fibCall.c  mapListCall  mapListCall.c  mergeSort  mergeSort.c  mergeSortCall  mergeSortCall.c  nQueens  nQueens.c
baselines/: fibCall  fibCall.c  mapListCall.c  mergeSortCall  mergeSortCall.c  nQueensCall  nQueensCall.c
benchmarking/: experiment.py  graphs.py  stats.py  test.py
cProgs/: mergeSortCall  mergeSortCall.c  nQueensCall  nQueensCall.c
notes/: benchmarks.md  questions.md  todo.md
outputs/: fibCall  fibCall.c  fibCall_output  fibCall_output.c  gcdLangCall  gcdLangCall.c  gcdLangCall_output  gcdLangCall_output.c  lenListCall  lenListCall.c  lenListCall_output  lenListCall_output.c  lib.c  listDefs.c  listLib.c  mapListCall  mapListCall.c  mapListCall_output  mapListCall_output.c  mergeSortCall  mergeSortCall.c  mergeSortCall1  mergeSortCall1.c  mergeSortCall_asan  mergeSortCall_output  mergeSortCall_output.c  sumListCall  sumListCall.c  sumListCall_output  sumListCall_output.c
outputs/merged/: fibCall  (+10 more)
pythonScripts/: experiment.py  graphs.py  measure.py  stats.py
(+137 files in other folders)
