cabal-version:      3.0
name:               lambdaemma
version:            0.1.0.0

executable lambdaemma
    main-is:          Main.hs
    other-modules:    AbsLang, NamedLang, CLang, IOpractice, CLang2, C

    build-depends:
        base >= 4.14 && < 4.15,
        containers ^>=0.6.7,
        mtl ^>=2.2.2,
        llvm-hs-pure >= 12.0 && < 13

    default-language: Haskell2010
    ghc-options:      -Wall -g -O0

-- LLVM_CONFIG=llvm-config-14 cabal build --ghc-options="-g -fbreak-on-exception"