cabal-version:      3.0
name:               lambdaemma
version:            0.1.0.0

executable lambdaemma
    main-is: Main.hs
    other-modules: AbsLang, NamedLang, CLang, C, CDefs, InlinePass, DemotePass, DeadCodePass, Utils, AST, LambdaMergePass

    build-depends:
        base >= 4.14 && < 5,
        containers ^>=0.6.7,
        mtl ^>=2.2.2

    default-language: Haskell2010
    ghc-options:      -Wall -g -O0